# NEO-TX

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  pyproject.toml
alchemyvoice/: __init__.py  schemas.py  server.py
alchemyvoice/api/: __init__.py  callbacks.py  chat.py  voice.py
alchemyvoice/bridge/: __init__.py  alchemy_client.py
alchemyvoice/constitution/: __init__.py  engine.py  rules.py
alchemyvoice/knowledge/: __init__.py  reporter.py  retriever.py
alchemyvoice/models/: __init__.py  conversation.py  provider.py  registry.py  schemas.py
alchemyvoice/planner/: __init__.py  planner.py
alchemyvoice/router/: __init__.py  cascade.py  classifier.py  router.py
alchemyvoice/tray/: __init__.py  app.py  dialogs.py  events.py  icon.py
alchemyvoice/voice/: __init__.py  audio.py  fish_speech.py  listener.py  pipeline.py  stt.py  tts.py  vram_manager.py  wake_word.py
config/: logging.py  settings.py
docs/: PLAN.md
neotx/: __init__.py  schemas.py  server.py
neotx/agent/: __init__.py
neotx/api/: __init__.py  callbacks.py  chat.py
neotx/bridge/: __init__.py  alchemy_client.py
neotx/constitution/: __init__.py  engine.py  rules.py
neotx/models/: __init__.py  conversation.py  provider.py  registry.py  schemas.py
neotx/planner/: __init__.py  decomposer.py  planner.py
neotx/router/: __init__.py  cascade.py  classifier.py  router.py
neotx/shadow/: __init__.py
neotx/tray/: __init__.py  app.py  dialogs.py  icon.py  viewport.py
neotx/voice/: __init__.py  audio.py  fish_speech.py  listener.py  pipeline.py  stt.py  tts.py  vram_manager.py  wake_word.py
scripts/: demo.py
tests/: conftest.py  test_alchemy_client.py  test_callbacks_api.py  test_chat_api.py  test_schemas.py  test_voice_api.py
tests/test_constitution/: test_engine.py  test_rules.py
tests/test_models/: test_conversation.py  test_provider.py  test_registry.py
tests/test_planner/: test_decomposer.py  test_planner.py
tests/test_router/: test_cascade.py  test_classifier.py  test_router.py
tests/test_tray/: conftest.py  test_callbacks_upgrade.py  test_events.py  test_tray_app.py
tests/test_voice/: conftest.py  test_audio.py  test_fish_speech.py  test_fish_speech_tts.py  test_listener.py  test_pipeline.py  test_stt.py  test_tts.py  test_vram_manager.py  test_wake_word.py
wsl/: health_check.sh  setup.sh  start_shadow.sh  stop_shadow.sh
