[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alchemyvoice", "config"]

[project]
name = "alchemyvoice"
version = "0.4.0"
description = "Smart AI interface — voice, fast GPU models, tray widget, approval gates"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Daniel", email = "daniel@neosynaptics.com" },
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "websockets",
]

[project.optional-dependencies]
voice = [
    "faster-whisper",
    "openwakeword",
    "sounddevice",
    "webrtcvad",
]
voice-piper = [
    "alchemyvoice[voice]",
    "piper-tts",
]
tray = [
    "PyQt6",
    "PyQt6-WebEngine",
]
planner = [
    "chromadb",
]
all = [
    "alchemyvoice[voice,voice-piper,tray,planner]",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pip-tools",
]
tray-dev = [
    "alchemyvoice[tray]",
    "pytest-qt",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "gpu: tests requiring GPU for voice/model inference",
    "integration: tests requiring Alchemy running",
]

[tool.ruff]
target-version = "py312"
line-length = 100
